camera detection and lidar detection

--- a/MDK-ARM/KEPALA_F407/KEPALA_F407.build_log.htm
+++ b/MDK-ARM/KEPALA_F407/KEPALA_F407.build_log.htm
@@ -28,31 +28,15 @@ Project File Date:  01/24/2023
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'KEPALA_F407'
 compiling main.c...
-..\..\KEPALA_F407\Huskylens_driver.h(128): warning:  #1-D: last line of file ends without a newline
+../../KEPALA_F407/Huskylens_driver.h(160): warning:  #1-D: last line of file ends without a newline
   #endif
-..\..\KEPALA_F407\Ping_driver.h(19): warning:  #1-D: last line of file ends without a newline
+../../KEPALA_F407/Ping_driver.h(19): warning:  #1-D: last line of file ends without a newline
   #endif
-../Core/Src/main.c(166): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  					if(lidar.degA[i] > 0.1){
-../Core/Src/main.c(170): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  					if(lidar.degB[i] > 0.1){
-../Core/Src/main.c(174): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  					if(lidar.degC[i] > 0.1){
-../Core/Src/main.c(178): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  					if(lidar.degD[i] > 0.1){
-../Core/Src/main.c(182): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  					if(lidar.degE[i] > 0.1){
-../Core/Src/main.c(186): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  					if(lidar.degF[i] > 0.1){
-../Core/Src/main.c(190): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  					if(lidar.degG[i] > 0.1){
-../Core/Src/main.c(194): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  					if(lidar.degH[i] > 0.1){
-../Core/Src/main.c: 10 warnings, 0 errors
+../Core/Src/main.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=16060 RO-data=448 RW-data=56 ZI-data=4136  
+Program Size: Code=9274 RO-data=450 RW-data=32 ZI-data=2024  
 FromELF: creating hex file...
-"KEPALA_F407\KEPALA_F407.axf" - 0 Error(s), 10 Warning(s).
+"KEPALA_F407\KEPALA_F407.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
